// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MenuItemCheckbox > should allow for a custom unchecked and checked icon 1`] = `
<li
  aria-checked="false"
  class="rmd-list-item rmd-list-item--medium rmd-interaction-surface rmd-checkbox-menu-item rmd-menu-item-input-toggle"
  id="menu-item-:r1:"
  role="menuitemcheckbox"
  tabindex="-1"
>
  <span
    class="rmd-list-item__text"
  >
    Checkbox
  </span>
  <span
    class="rmd-checkbox rmd-input-toggle rmd-icon--after rmd-list-item__addon rmd-menu-item-input-toggle__icon"
  />
</li>
`;

exports[`MenuItemCheckbox > should allow for a custom unchecked and checked icon 2`] = `
<li
  aria-checked="true"
  class="rmd-list-item rmd-list-item--medium rmd-interaction-surface rmd-checkbox-menu-item rmd-menu-item-input-toggle"
  id="menu-item-:r1:"
  role="menuitemcheckbox"
  tabindex="-1"
>
  <span
    class="rmd-list-item__text"
  >
    Checkbox
  </span>
  <span
    class="rmd-checkbox rmd-input-toggle rmd-input-toggle--active rmd-icon--after rmd-list-item__addon rmd-menu-item-input-toggle__icon"
  >
    <span
      data-testid="checked"
    />
  </span>
</li>
`;

exports[`MenuItemCheckbox > should apply the correct styling, HTMLAttributes, and allow a ref 1`] = `
<li
  aria-checked="false"
  class="rmd-list-item rmd-list-item--medium rmd-interaction-surface rmd-checkbox-menu-item rmd-menu-item-input-toggle"
  id="menu-item-:r0:"
  role="menuitemcheckbox"
  tabindex="-1"
>
  <span
    class="rmd-checkbox rmd-input-toggle rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-menu-item-input-toggle__icon"
  >
    <span
      aria-hidden="true"
      class="rmd-icon rmd-icon--font material-icons"
    >
      check_box_outline_blank
    </span>
  </span>
  <span
    class="rmd-list-item__text"
  >
    Checkbox
  </span>
</li>
`;

exports[`MenuItemCheckbox > should apply the correct styling, HTMLAttributes, and allow a ref 2`] = `
<li
  aria-checked="false"
  class="rmd-list-item rmd-list-item--medium rmd-interaction-surface rmd-checkbox-menu-item rmd-menu-item-input-toggle custom-class-name"
  id="menu-item-:r0:"
  role="menuitemcheckbox"
  style="color: white;"
  tabindex="-1"
>
  <span
    class="rmd-checkbox rmd-input-toggle rmd-icon--before rmd-list-item__addon rmd-list-item__addon--before rmd-menu-item-input-toggle__icon"
  >
    <span
      aria-hidden="true"
      class="rmd-icon rmd-icon--font material-icons"
    >
      check_box_outline_blank
    </span>
  </span>
  <span
    class="rmd-list-item__text"
  >
    Checkbox
  </span>
</li>
`;
